# mipt-mlta-gram0

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: duplicate.txt  invert.txt  plus_one.txt
lib/: gram0.cpp  gram0.h
tests/: CMakeLists.txt  examples_test.cpp  helpers.h  parse_rules_test.cpp  run_test.cpp
